.data/install-minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: kratix-platform-system
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
      nodePort: 31337
  selector:
    run: minio
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: minio
  name: minio
  namespace: kratix-platform-system
spec:
  replicas: 1
  selector:
    matchLabels:
      run: minio
  template:
    metadata:
      labels:
        run: minio
    spec:
      containers:
        - image: docker.io/minio/minio:RELEASE.2022-06-30T20-58-09Z
          name: minio
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /data
              name: data-volume
      volumes:
        - name: data-volume
          emptyDir: {}
